[package]
name = "tyto"
version = "0.1.0"
authors = ["Alexander Decurnou <ad@alx.xyz>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-service = "1.0.5"
actix-web = "2.0.0"
bendy = "^0.2"
bincode = "*"
bytes = "*"
clap = "*"
env = "*"
futures = "0.3"
log = "*"
mysql = "*"
percent-encoding = "*"
pretty_env_logger = "*"
rand = "*"
regex = "*"
serde = { version = "1.0", features = ["derive", "rc"] }
toml = "*"
url = "*"

[dependencies.dashmap]
version = "*"
features = ["serde"]
