[package]
name = "tyto"
version = "0.3.1-alpha"
authors = ["Alexander Decurnou <ad@alx.xyz>"]
edition = "2018"

[dependencies]
actix = "0.9.0"
actix-rt = "1.0.0"
actix-service = "1.0.5"
actix-web = "2.0.0"
bendy = "^0.2"
bincode = "*"
bytes = "*"
clap = "*"
env = "*"
futures = "0.3"
log = "*"
mysql = "*"
parking_lot = "*"
percent-encoding = "*"
pretty_env_logger = "*"
rand = "*"
regex = "*"
serde = { version = "1.0", features = ["derive", "rc"] }
toml = "*"
url = "*"

[dependencies.hashbrown]
version = "*"
features = ["serde", "rayon"]
